[package]
categories = ["gui", "web-programming", "wasm"]
description = "Ant Design components for Leptos framework"
documentation = "https://docs.rs/ant-leptos"
edition = "2021"
keywords = ["leptos", "ant-design", "components", "ui", "wasm"]
license = "MIT"
name = "ant-leptos"
readme = "README.md"
repository = "https://github.com/your-username/ant-leptos"
version = "0.0.1"

[dependencies]
cfg-if = "1.0"
chrono = {version = "0.4", features = ["serde"]}
js-sys = "0.3"
leptos = {version = "0.7.2", features = ["csr"]}
leptos_meta = {version = "0.7.2"}
log = "0.4"
once_cell = "1.19"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = [
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "CssStyleDeclaration",
  "DomTokenList",
]}

[dev-dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen-test = "0.3"

[features]
csr = ["leptos/csr"]
default = ["csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
